# nudgebee

./: CLAUDE.md  CONTRIBUTING.md  README.md
app-e2e-tests/: package-lock.json  package.json  (+1 more)
notifications-server/: pyproject.toml
notifications-server/notifications_server/: server.py
notifications-server/notifications_server/clients/: discord_client.py  google_chat_app_client.py
notifications-server/notifications_server/configs/: settings.py
notifications-server/notifications_server/emailer/: sender.py
notifications-server/notifications_server/message_templates/: __init__.py
notifications-server/notifications_server/message_templates/discord/: finding.py  grouped_anomaly.py  slo.py
notifications-server/notifications_server/models/: enums.py  models.py
notifications-server/notifications_server/repositories/: google_chat_binding_repository.py  oauth_repository.py
notifications-server/notifications_server/routers/: common.py  discord.py  tools.py
notifications-server/notifications_server/security/: secrets.py
notifications-server/notifications_server/services/: common.py  events.py  message.py  messaging_installations.py
notifications-server/notifications_server/services/discord/: __init__.py  discord.py
notifications-server/notifications_server/services/ms_teams/: ms_teams.py
notifications-server/notifications_server/services/slack/: slack_installation_store.py
notifications-server/notifications_server/utils/: cache_util.py  documented_pydantic.py  encode_utils.py  user_util.py
notifications-server/tests/: test_cache_util.py  test_common_service_fingerprint.py  test_discord_alert_templates.py  test_discord_template_dispatch.py  test_encode_utils.py  test_google_chat_disposition.py  test_google_chat_join.py  test_messaging_installations.py  test_secrets_interop.py  test_threaded_reply_install_resolution.py  test_transformer.py
(+1496 files in other folders)
